fix errors after forward merge / rebase to 4.0